rust/adl-lsp/src/parser/snapshots/adl_lsp__parser__references__test__references-3.snap
---
source: src/parser/references.rs
expression: content_refs
---
- uri: "file://input/message.adl"
  range:
    start:
      line: 12
      character: 8
    end:
      line: 12
      character: 15
