rust/adl-lsp/src/parser/snapshots/adl_lsp__parser__references__test__references-4.snap
---
source: src/parser/references.rs
expression: name_refs
---
- uri: "file://input/message.adl"
  range:
    start:
      line: 11
      character: 8
    end:
      line: 11
      character: 12
