rust/adl-lsp/src/parser/snapshots/adl_lsp__parser__references__test__references-5.snap
---
source: src/parser/references.rs
expression: user_refs
---
- uri: "file://input/message.adl"
  range:
    start:
      line: 13
      character: 8
    end:
      line: 13
      character: 12
