rust/adl-lsp/src/parser/snapshots/adl_lsp__parser__references__test__references-6.snap
---
source: src/parser/references.rs
expression: string_ne_refs
---
- uri: "file://input/message.adl"
  range:
    start:
      line: 14
      character: 22
    end:
      line: 14
      character: 30
